--- a/gradle.properties
+++ b/gradle.properties
@@ -12,8 +12,9 @@ groovyVersion = 3.0.17
 bndVersion = 6.3.1
 tagsoupVersion = 1.2.1
 jcacheVersion = 2.6.1.Final
-junitVersion = 4.13
+#junitVersion = 4.13
 junitVintageVersion = 5.8.2
+spockVersion = 2.4-M1-groovy-3.0
 testcontainersVersion = 1.16.2
 
 jacoco_htmlReport = true
@@ -24,4 +25,4 @@ sonatype_password=
 org.gradle.caching = true
 org.gradle.vfs.watch = true
 
-revApiOldVersion = 4.0.0-beta8
+revApiOldVersion = 4.0.0-rc1
