Refactored modifiers for descriptive properties

--- a/.palantir/revapi.yml
+++ b/.palantir/revapi.yml
@@ -3214,6 +3214,15 @@ acceptedBreaks:
     - code: "java.method.removed"
       old: "method java.util.Optional<net.fortuna.ical4j.model.property.Uid> net.fortuna.ical4j.model.RelationshipPropertyAccessor::getUid()"
       justification: "use_accessor_interface_for_consistency"
+    - code: "java.method.removed"
+      old: "method void net.fortuna.ical4j.model.DescriptivePropertyAccessor::addAttachment(byte[])"
+      justification: "removed_modifier_methods_from_accessors"
+    - code: "java.method.removed"
+      old: "method void net.fortuna.ical4j.model.DescriptivePropertyAccessor::setCategories(java.lang.String[])"
+      justification: "removed_modifier_methods_from_accessors"
+    - code: "java.method.removed"
+      old: "method void net.fortuna.ical4j.model.DescriptivePropertyAccessor::setSummary(java.lang.String)"
+      justification: "removed_modifier_methods_from_accessors"
     - code: "java.method.returnTypeTypeParametersChanged"
       old: "method java.util.Optional<net.fortuna.ical4j.model.property.DtEnd<?>>\
         \ net.fortuna.ical4j.model.component.VFreeBusy::getEndDate()"
