--- a/src/test/resources/log4j2.properties
+++ b/src/test/resources/log4j2.properties
@@ -31,28 +31,29 @@
 #
 
 ## set root logging preferences..
-log4j.rootLogger=info, stdout
-log4j.logger.net.fortuna.ical4j=info, stdout
-
-log4j.logger.net.fortuna.ical4j.filter=info, stdout
-log4j.additivity.net.fortuna.ical4j.filter=false
-
-log4j.logger.net.fortuna.ical4j.model=info, stdout
-log4j.additivity.net.fortuna.ical4j.model=false
-
-log4j.logger.net.fortuna.ical4j.model.TimeZoneTest=info, stdout
-log4j.additivity.net.fortuna.ical4j.model.TimeZoneTest=false
-
-log4j.logger.net.fortuna.ical4j.model.component.Observance=debug, stdout
-log4j.additivity.net.fortuna.ical4j.model.component.Observance=false
-
-log4j.logger.net.fortuna.ical4j.model.property.DateProperty=debug, stdout
-log4j.additivity.net.fortuna.ical4j.model.property.DateProperty=false
-
-log4j.logger.net.fortuna.ical4j.model.UtcOffsetTest=debug, stdout
-log4j.additivity.net.fortuna.ical4j.model.UtcOffsetTest=false
+rootLogger=info, stdout
+#logger.net.fortuna.ical4j=info, stdout
+#
+#logger.net.fortuna.ical4j.filter=info, stdout
+#additivity.net.fortuna.ical4j.filter=false
+#
+#logger.net.fortuna.ical4j.model=info, stdout
+#additivity.net.fortuna.ical4j.model=false
+#
+#logger.net.fortuna.ical4j.model.TimeZoneTest=info, stdout
+#additivity.net.fortuna.ical4j.model.TimeZoneTest=false
+#
+#logger.net.fortuna.ical4j.model.component.Observance=debug, stdout
+#additivity.net.fortuna.ical4j.model.component.Observance=false
+#
+#logger.net.fortuna.ical4j.model.property.DateProperty=debug, stdout
+#additivity.net.fortuna.ical4j.model.property.DateProperty=false
+#
+#logger.net.fortuna.ical4j.model.UtcOffsetTest=debug, stdout
+#additivity.net.fortuna.ical4j.model.UtcOffsetTest=false
 
 ## appender: stdout..
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=[%d] %-5p [%t] %c{1} - %m%n
+appender.stdout.type=Console
+appender.stdout.name=stdout
+appender.stdout.layout.type=PatternLayout
+appender.stdout.layout.pattern=[%d] %-5p [%t] %c{1} - %m%n
