--- a/build.gradle
+++ b/build.gradle
@@ -158,7 +158,7 @@ scmVersion {
     branchVersionCreator = ['master': 'simple']
     branchVersionCreator = ['ical4j-1.x-maintenance': 'simple']
     branchVersionCreator = ['ical4j-2.x-maintenance': 'simple']
-    branchVersionCreator = ['feature/jsr-310-localdate': 'simple']
+    branchVersionCreator = ['ical4j-3.x-maintenance': 'simple']
     nextVersion {
         suffix = 'pre'
         separator = '-'
