--- a/gradle.properties
+++ b/gradle.properties
@@ -25,4 +25,4 @@ sonatype_password=
 org.gradle.caching = true
 org.gradle.vfs.watch = true
 
-revApiOldVersion = 4.0.0-rc4
+revApiOldVersion = 4.0.0
