Added action for creating github releases from tags

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -3,7 +3,9 @@ name: Create Release
 on:
   push:
     tags:
-      - "ical4j-.*(?<!pre)$"
+      - "ical4j-*"
+    tags-ignore:
+      - "ical4j-*-pre"
 
 jobs:
   build:
