Added action for creating github releases from tags

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -4,8 +4,8 @@ on:
   push:
     tags:
       - "ical4j-*"
-    tags-ignore:
-      - "ical4j-*-pre"
+      - "!ical4j-*-pre"
+      - "!ical4j-3.x-maintenance"
 
 jobs:
   build:
