Use OffsetDateTime to represent FORM #2 dates for properties that support multiple date types (e.g. DTSTART, etc.)

--- a/build.gradle
+++ b/build.gradle
@@ -110,7 +110,7 @@ test {
 
     finalizedBy jacocoTestCoverageVerification, jacocoTestReport // Ensure Jacoco is run after tests have completed
 
-    jvmArgs = [ "-Duser.timezone=UTC" ] // Some tests require default timezone to be UTC
+//    jvmArgs = [ "-Duser.timezone=UTC" ] // Some tests require default timezone to be UTC
 }
 
 jacocoTestCoverageVerification {
