Refactored compliance transformations to new package

--- a/.palantir/revapi.yml
+++ b/.palantir/revapi.yml
@@ -2101,6 +2101,46 @@ acceptedBreaks:
     - code: "java.method.removed"
       old: "method boolean net.fortuna.ical4j.data.ContentHandlerContext::isSupressInvalidProperties()"
       justification: "fixed_spelling"
+  "4.0.0":
+    org.mnode.ical4j:ical4j:
+    - code: "java.class.removed"
+      old: "class net.fortuna.ical4j.transform.RuleManager"
+      justification: "refactored_compliance_transformations"
+    - code: "java.class.removed"
+      old: "class net.fortuna.ical4j.transform.calendar.Rfc5545Transformer"
+      justification: "refactored_compliance_transformations"
+    - code: "java.class.removed"
+      old: "class net.fortuna.ical4j.transform.component.VAlarmRule"
+      justification: "refactored_compliance_transformations"
+    - code: "java.class.removed"
+      old: "class net.fortuna.ical4j.transform.component.VEventRule"
+      justification: "refactored_compliance_transformations"
+    - code: "java.class.removed"
+      old: "class net.fortuna.ical4j.transform.property.AttendeePropertyRule"
+      justification: "refactored_compliance_transformations"
+    - code: "java.class.removed"
+      old: "class net.fortuna.ical4j.transform.property.DateListPropertyRule"
+      justification: "refactored_compliance_transformations"
+    - code: "java.class.removed"
+      old: "class net.fortuna.ical4j.transform.property.DatePropertyRule"
+      justification: "refactored_compliance_transformations"
+    - code: "java.class.removed"
+      old: "class net.fortuna.ical4j.transform.property.TzHelper"
+      justification: "refactored_compliance_transformations"
+    - code: "java.class.removed"
+      old: "class net.fortuna.ical4j.transform.property.TzIdRule"
+      justification: "refactored_compliance_transformations"
+    - code: "java.class.removed"
+      old: "interface net.fortuna.ical4j.transform.Rfc5545Rule<T extends java.lang.Object>"
+      justification: "refactored_compliance_transformations"
+    - code: "java.class.removed"
+      old: "interface net.fortuna.ical4j.transform.component.Rfc5545ComponentRule<T\
+        \ extends net.fortuna.ical4j.model.Component>"
+      justification: "refactored_compliance_transformations"
+    - code: "java.class.removed"
+      old: "interface net.fortuna.ical4j.transform.property.Rfc5545PropertyRule<T\
+        \ extends net.fortuna.ical4j.model.Property>"
+      justification: "refactored_compliance_transformations"
   "4.0.0-beta3":
     org.mnode.ical4j:ical4j:
     - code: "java.class.defaultSerializationChanged"
